--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "package.json",
+  "name": "myportfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://ag333ghosh.github.io/myportfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
@@ -24,6 +27,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
